--- a/03 - 3 Flexbox.html
+++ b/03 - 3 Flexbox.html
@@ -10,7 +10,15 @@
 
 <body>
     <h6>优点：Flexbox 非常擅长垂直居中和等高，容易重新排列盒子</h6>
-    <h6>缺点：</h6>
+    <h6>缺点：它从来没设计为锁定的布局</h6>
+    <h6>实际上是一种一维类型的布局</h6>
+    <div class="games">
+        <ul>
+            <li>http://flexboxfroggy.com</li>
+            <li>http://flexboxdefense.com</li>
+        </ul>
+    </div>
+    <h6>https://css-tricks.com/snippets/css/a-guide-to-flexbox</h6>
 </body>
 
 </html>
